it worksgit add Networks.py  But we want to understand if the learning is ok.

--- a/Environment.ipynb
+++ b/Environment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -72,7 +72,7 @@
     "def reward_calculator(travel_time, marginal_cost, soc_fac):\n",
     "    rew_dict = {}\n",
     "    for agent in travel_time.keys():\n",
-    "        rew_dict[agent] = travel_time[agent] + soc_fac * marginal_cost[agent]\n",
+    "        rew_dict[agent] = - (travel_time[agent] + soc_fac * marginal_cost[agent])\n",
     "    return rew_dict\n",
     "\n",
     "## Routing Environment \n",
@@ -205,7 +205,7 @@
     "            # Set done and infos\n",
     "            done[agent] = True\n",
     "            info_dict[agent] = {}\n",
-    "        rew_dict = reward_calculator(travel_time, marginal_cost, soc_fac)\n",
+    "        rew_dict = reward_calculator(travel_time, marginal_cost, self.soc_fac)\n",
     "        self.state = obs_dict   \n",
     "        done[\"__all__\"] = True\n",
     "         \n",
@@ -221,36 +221,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Process STDOUT and STDERR is being redirected to /tmp/ray/session_2018-11-30_13-32-53_99385/logs.\n",
-      "Waiting for redis server at 127.0.0.1:19971 to respond...\n",
-      "Waiting for redis server at 127.0.0.1:56197 to respond...\n",
+      "Process STDOUT and STDERR is being redirected to /tmp/ray/session_2018-11-30_13-38-18_99568/logs.\n",
+      "Waiting for redis server at 127.0.0.1:54926 to respond...\n",
+      "Waiting for redis server at 127.0.0.1:27127 to respond...\n",
       "Starting the Plasma object store with 6.871947672999999 GB memory using /tmp.\n",
       "\n",
       "======================================================================\n",
-      "View the web UI at http://localhost:8889/notebooks/ray_ui.ipynb?token=b40bae082a4802015b688bc6f7a47a9be77604d2e0d4c4ad\n",
+      "View the web UI at http://localhost:8889/notebooks/ray_ui.ipynb?token=878469f6e608a5d58f8c510c169e0d60594d1bb77fe69d60\n",
       "======================================================================\n",
       "\n",
       "== Status ==\n",
       "Using FIFO scheduling algorithm.\n",
       "Resources requested: 0/8 CPUs, 0/0 GPUs\n",
-      "Memory usage on this node: 9.9/17.2 GB\n",
+      "Memory usage on this node: 10.0/17.2 GB\n",
       "\n",
-      "Created LogSyncer for /Users/theophile/ray_results/route-DQN/DQN_multi_routing_0_2018-11-30_13-32-54x_fy84jh -> \n",
+      "Created LogSyncer for /Users/theophile/ray_results/route-DQN/DQN_multi_routing_0_2018-11-30_13-38-19dsyf9uc3 -> \n",
       "WARNING: Falling back to serializing objects of type <class 'numpy.dtype'> by using pickle. This may be inefficient.\n",
       "== Status ==\n",
       "Using FIFO scheduling algorithm.\n",
       "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
-      "Memory usage on this node: 9.9/17.2 GB\n",
+      "Memory usage on this node: 10.0/17.2 GB\n",
       "Result logdir: /Users/theophile/ray_results/route-DQN\n",
       "RUNNING trials:\n",
       " - DQN_multi_routing_0:\tRUNNING\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-38-31\n",
+      "  done: false\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -14.9865\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 1000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: .nan\n",
+      "    max_exploration: 1.0\n",
+      "    min_exploration: 1.0\n",
+      "    num_steps_sampled: 1000\n",
+      "    num_steps_trained: 0\n",
+      "    num_target_updates: 1\n",
+      "    opt_peak_throughput: 0.0\n",
+      "    opt_samples: .nan\n",
+      "    replay_time_ms: .nan\n",
+      "    sample_time_ms: 8.834\n",
+      "    update_time_ms: 0.001\n",
+      "  iterations_since_restore: 1\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.746625\n",
+      "  time_since_restore: 2.3592119216918945\n",
+      "  time_this_iter_s: 2.3592119216918945\n",
+      "  time_total_s: 2.3592119216918945\n",
+      "  timestamp: 1543613911\n",
+      "  timesteps_since_restore: 1000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 1000\n",
+      "  training_iteration: 1\n",
+      "  \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.6/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "RUNNING trials:\n",
+      " - DQN_multi_routing_0:\tRUNNING [pid=99582], 2 s, 1 iter, 1000 ts, -15 rew\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-38-36\n",
+      "  done: false\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -15.004\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 2000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: 6.759\n",
+      "    max_exploration: 0.902\n",
+      "    min_exploration: 0.902\n",
+      "    num_steps_sampled: 2000\n",
+      "    num_steps_trained: 8000\n",
+      "    num_target_updates: 3\n",
+      "    opt_peak_throughput: 4734.261\n",
+      "    opt_samples: 32.0\n",
+      "    replay_time_ms: 2.467\n",
+      "    sample_time_ms: 9.478\n",
+      "    update_time_ms: 0.001\n",
+      "  iterations_since_restore: 2\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.751\n",
+      "  time_since_restore: 7.607595920562744\n",
+      "  time_this_iter_s: 5.24838399887085\n",
+      "  time_total_s: 7.607595920562744\n",
+      "  timestamp: 1543613916\n",
+      "  timesteps_since_restore: 2000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 2000\n",
+      "  training_iteration: 2\n",
+      "  \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.6/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "RUNNING trials:\n",
+      " - DQN_multi_routing_0:\tRUNNING [pid=99582], 7 s, 2 iter, 2000 ts, -15 rew\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-38-45\n",
+      "  done: false\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -15.073\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 4000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: 6.517\n",
+      "    max_exploration: 0.706\n",
+      "    min_exploration: 0.706\n",
+      "    num_steps_sampled: 4000\n",
+      "    num_steps_trained: 24000\n",
+      "    num_target_updates: 7\n",
+      "    opt_peak_throughput: 4909.998\n",
+      "    opt_samples: 32.0\n",
+      "    replay_time_ms: 2.773\n",
+      "    sample_time_ms: 9.328\n",
+      "    update_time_ms: 0.002\n",
+      "  iterations_since_restore: 4\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.76825\n",
+      "  time_since_restore: 16.947008848190308\n",
+      "  time_this_iter_s: 4.712668180465698\n",
+      "  time_total_s: 16.947008848190308\n",
+      "  timestamp: 1543613925\n",
+      "  timesteps_since_restore: 4000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 4000\n",
+      "  training_iteration: 4\n",
+      "  \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.6/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "RUNNING trials:\n",
+      " - DQN_multi_routing_0:\tRUNNING [pid=99582], 16 s, 4 iter, 4000 ts, -15.1 rew\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-38-55\n",
+      "  done: false\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -15.268\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 6000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: 7.003\n",
+      "    max_exploration: 0.51\n",
+      "    min_exploration: 0.51\n",
+      "    num_steps_sampled: 6000\n",
+      "    num_steps_trained: 40000\n",
+      "    num_target_updates: 11\n",
+      "    opt_peak_throughput: 4569.441\n",
+      "    opt_samples: 32.0\n",
+      "    replay_time_ms: 3.214\n",
+      "    sample_time_ms: 10.365\n",
+      "    update_time_ms: 0.001\n",
+      "  iterations_since_restore: 6\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.817\n",
+      "  time_since_restore: 26.506409645080566\n",
+      "  time_this_iter_s: 4.885345935821533\n",
+      "  time_total_s: 26.506409645080566\n",
+      "  timestamp: 1543613935\n",
+      "  timesteps_since_restore: 6000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 6000\n",
+      "  training_iteration: 6\n",
+      "  \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.7/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "RUNNING trials:\n",
+      " - DQN_multi_routing_0:\tRUNNING [pid=99582], 26 s, 6 iter, 6000 ts, -15.3 rew\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-39-00\n",
+      "  done: false\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -15.3735\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 7000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: 6.767\n",
+      "    max_exploration: 0.41200000000000003\n",
+      "    min_exploration: 0.41200000000000003\n",
+      "    num_steps_sampled: 7000\n",
+      "    num_steps_trained: 48000\n",
+      "    num_target_updates: 13\n",
+      "    opt_peak_throughput: 4728.64\n",
+      "    opt_samples: 32.0\n",
+      "    replay_time_ms: 2.964\n",
+      "    sample_time_ms: 9.882\n",
+      "    update_time_ms: 0.001\n",
+      "  iterations_since_restore: 7\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.843375\n",
+      "  time_since_restore: 31.653084754943848\n",
+      "  time_this_iter_s: 5.146675109863281\n",
+      "  time_total_s: 31.653084754943848\n",
+      "  timestamp: 1543613940\n",
+      "  timesteps_since_restore: 7000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 7000\n",
+      "  training_iteration: 7\n",
+      "  \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.7/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "RUNNING trials:\n",
+      " - DQN_multi_routing_0:\tRUNNING [pid=99582], 31 s, 7 iter, 7000 ts, -15.4 rew\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-39-05\n",
+      "  done: false\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -15.5415\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 8000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: 7.194\n",
+      "    max_exploration: 0.31400000000000006\n",
+      "    min_exploration: 0.31400000000000006\n",
+      "    num_steps_sampled: 8000\n",
+      "    num_steps_trained: 56000\n",
+      "    num_target_updates: 15\n",
+      "    opt_peak_throughput: 4448.199\n",
+      "    opt_samples: 32.0\n",
+      "    replay_time_ms: 3.273\n",
+      "    sample_time_ms: 10.864\n",
+      "    update_time_ms: 0.001\n",
+      "  iterations_since_restore: 8\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.885375\n",
+      "  time_since_restore: 36.83364486694336\n",
+      "  time_this_iter_s: 5.180560111999512\n",
+      "  time_total_s: 36.83364486694336\n",
+      "  timestamp: 1543613945\n",
+      "  timesteps_since_restore: 8000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 8000\n",
+      "  training_iteration: 8\n",
+      "  \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.7/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "RUNNING trials:\n",
+      " - DQN_multi_routing_0:\tRUNNING [pid=99582], 36 s, 8 iter, 8000 ts, -15.5 rew\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-39-10\n",
+      "  done: false\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -15.6265\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 9000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: 6.471\n",
+      "    max_exploration: 0.21599999999999997\n",
+      "    min_exploration: 0.21599999999999997\n",
+      "    num_steps_sampled: 9000\n",
+      "    num_steps_trained: 64000\n",
+      "    num_target_updates: 17\n",
+      "    opt_peak_throughput: 4945.275\n",
+      "    opt_samples: 32.0\n",
+      "    replay_time_ms: 2.739\n",
+      "    sample_time_ms: 9.256\n",
+      "    update_time_ms: 0.001\n",
+      "  iterations_since_restore: 9\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.906625\n",
+      "  time_since_restore: 41.88171887397766\n",
+      "  time_this_iter_s: 5.048074007034302\n",
+      "  time_total_s: 41.88171887397766\n",
+      "  timestamp: 1543613950\n",
+      "  timesteps_since_restore: 9000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 9000\n",
+      "  training_iteration: 9\n",
+      "  \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 1/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.7/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "RUNNING trials:\n",
+      " - DQN_multi_routing_0:\tRUNNING [pid=99582], 41 s, 9 iter, 9000 ts, -15.6 rew\n",
+      "\n",
+      "Result for DQN_multi_routing_0:\n",
+      "  custom_metrics: {}\n",
+      "  date: 2018-11-30_13-39-15\n",
+      "  done: true\n",
+      "  episode_len_mean: 1.0\n",
+      "  episode_reward_max: -14.0\n",
+      "  episode_reward_mean: -15.888\n",
+      "  episode_reward_min: -17.0\n",
+      "  episodes_this_iter: 1000\n",
+      "  episodes_total: 10000\n",
+      "  experiment_id: bb2e2eb61b2249569018f2a61b156373\n",
+      "  hostname: C02X23AUJHD3\n",
+      "  info:\n",
+      "    grad_time_ms: 7.297\n",
+      "    max_exploration: 0.118\n",
+      "    min_exploration: 0.118\n",
+      "    num_steps_sampled: 10000\n",
+      "    num_steps_trained: 72000\n",
+      "    num_target_updates: 19\n",
+      "    opt_peak_throughput: 4385.512\n",
+      "    opt_samples: 32.0\n",
+      "    replay_time_ms: 3.276\n",
+      "    sample_time_ms: 10.85\n",
+      "    update_time_ms: 0.001\n",
+      "  iterations_since_restore: 10\n",
+      "  node_ip: 128.32.46.247\n",
+      "  num_metric_batches_dropped: 0\n",
+      "  pid: 99582\n",
+      "  policy_reward_mean:\n",
+      "    vehicles: -3.972\n",
+      "  time_since_restore: 46.93601369857788\n",
+      "  time_this_iter_s: 5.05429482460022\n",
+      "  time_total_s: 46.93601369857788\n",
+      "  timestamp: 1543613955\n",
+      "  timesteps_since_restore: 10000\n",
+      "  timesteps_this_iter: 1000\n",
+      "  timesteps_total: 10000\n",
+      "  training_iteration: 10\n",
+      "  \n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 0/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.7/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "TERMINATED trials:\n",
+      " - DQN_multi_routing_0:\tTERMINATED [pid=99582], 46 s, 10 iter, 10000 ts, -15.9 rew\n",
+      "\n",
+      "== Status ==\n",
+      "Using FIFO scheduling algorithm.\n",
+      "Resources requested: 0/8 CPUs, 0/0 GPUs\n",
+      "Memory usage on this node: 10.7/17.2 GB\n",
+      "Result logdir: /Users/theophile/ray_results/route-DQN\n",
+      "TERMINATED trials:\n",
+      " - DQN_multi_routing_0:\tTERMINATED [pid=99582], 46 s, 10 iter, 10000 ts, -15.9 rew\n",
       "\n"
      ]
     }
@@ -289,7 +679,7 @@
     "    'network': network_name,\n",
     "    'num_veh': nb_veh,\n",
     "    'num_paths': nb_path,\n",
-    "    'soc_fac': 0.5\n",
+    "    'soc_fac': 0.0 # to change\n",
     "}\n",
     "routing_env = RoutingEnv(env_config)\n",
     "car_obs_space = routing_env.observation_space\n",
