--- a/Networks.ipynb
+++ b/Networks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class network:\n",
+    "    \"\"\"\n",
+    "    This class store the network characteristic.\n",
+    "    \"\"\"\n",
     "    def __init__(self, network_name, nb_veh):\n",
     "        \"\"\"\n",
     "        load the network which correspond to the network_name\n",
@@ -46,7 +49,7 @@
     "            \n",
     "        else:\n",
     "            raise Exception(\"The network name is not known! The only options are: \\'Braess\\'. This error was raise in the instancation of the class network\")\n",
-    "    \n",
+    "        \n",
     "    def __travel_time(self, f):\n",
     "        f = f * self.__flow_per_veh\n",
     "        g = self.__graph\n",
@@ -88,60 +91,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net = network(\"Braess\", 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net.update_flow_from_dict({0:2,1:1,2:1})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3.75"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- TESTING ----\n",
+      "The Nash case\n",
+      "[3.75, 3.75, 3.75]\n",
+      "[0.2, 0.1, 0.1]\n",
+      "The social optimum case\n",
+      "[3.25, 3.5, 3.5]\n",
+      "[0.2, 0.1, 0.1]\n"
+     ]
     }
    ],
    "source": [
-    "net.travel_time(1)"
+    "net = network(\"Braess\", 4)\n",
+    "\n",
+    "print(\"---- TESTING ----\")\n",
+    "print(\"The Nash case\")\n",
+    "net.update_flow_from_dict({0:2,1:1,2:1})\n",
+    "assert([net.travel_time(i) for i in range(3)] == [3.75, 3.75, 3.75])\n",
+    "assert([net.marginal_cost(i) for i in range(3)] == [0.2, 0.1, 0.1])\n",
+    "print([net.travel_time(i) for i in range(3)])\n",
+    "print([net.marginal_cost(i) for i in range(3)])\n",
+    "\n",
+    "print(\"The social optimum case\")\n",
+    "net.update_flow_from_dict({0:0,1:2,2:2})\n",
+    "assert([net.travel_time(i) for i in range(3)] == [3.25, 3.5, 3.5])\n",
+    "assert([net.marginal_cost(i) for i in range(3)] == [0.2, 0.1, 0.1])\n",
+    "print([net.travel_time(i) for i in range(3)])\n",
+    "print([net.marginal_cost(i) for i in range(3)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "net.marginal_cost(1)"
+    "import cvxpy\n",
+    "\n",
+    "d = 10\n",
+    "A = np.array([[2, 1, 1],\n",
+    "              [1, 1, 0],\n",
+    "              [1, 0, 1]]) + 1e-5\n",
+    "print(np.linalg.eig(A))\n",
+    "print(np.linalg.inv(A) @ B)\n",
+    "B = np.array([2.25, 3, 3])\n",
+    "\n",
+    "h = cvxpy.Variable(3)\n",
+    "h_s = np.array([0, 5, 5])\n",
+    "constraints = [\n",
+    "    h >= 0,\n",
+    "    np.sum(h) <= d\n",
+    "]\n",
+    "print(h_s.T @ A @ h_s + B @ h_s)\n",
+    "obj = cvxpy.Minimize(B @ h) # h.T @ A @ h + B @ h)\n",
+    "\n",
+    "pb = cvxpy.Problem(obj, constraints)\n",
+    "pb.solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(net)"
    ]
   },
   {
@@ -168,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   },
   "widgets": {
    "state": {},
