--- a/Networks.ipynb
+++ b/Networks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "    def __marginal_cost(self, f):\n",
     "        f = f * self.__flow_per_veh\n",
     "        g = self.__graph\n",
-    "        return g[:,4] + 2*g[:,5]*f + 3*g[:,6]*(f**2) + 4*g[:,7]*(f**3)\n",
+    "        return g[:,4]*f + 2*g[:,5]*(f**2) + 3*g[:,6]*(f**3) + 4*g[:,7]*(f**4)\n",
     "    \n",
     "    @property\n",
     "    def nb_paths(self):\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -101,10 +101,10 @@
       "---- TESTING ----\n",
       "The Nash case\n",
       "[3.75, 3.75, 3.75]\n",
-      "[0.2, 0.1, 0.1]\n",
+      "[1.5, 0.75, 0.75]\n",
       "The social optimum case\n",
       "[3.25, 3.5, 3.5]\n",
-      "[0.2, 0.1, 0.1]\n"
+      "[1.0, 0.5, 0.5]\n"
      ]
     }
    ],
@@ -115,54 +115,16 @@
     "print(\"The Nash case\")\n",
     "net.update_flow_from_dict({0:2,1:1,2:1})\n",
     "assert([net.travel_time(i) for i in range(3)] == [3.75, 3.75, 3.75])\n",
-    "assert([net.marginal_cost(i) for i in range(3)] == [0.2, 0.1, 0.1])\n",
+    "assert([net.marginal_cost(i) for i in range(3)] == [1.5, 0.75, 0.75])\n",
     "print([net.travel_time(i) for i in range(3)])\n",
     "print([net.marginal_cost(i) for i in range(3)])\n",
     "\n",
     "print(\"The social optimum case\")\n",
     "net.update_flow_from_dict({0:0,1:2,2:2})\n",
     "assert([net.travel_time(i) for i in range(3)] == [3.25, 3.5, 3.5])\n",
-    "assert([net.marginal_cost(i) for i in range(3)] == [0.2, 0.1, 0.1])\n",
+    "assert([net.marginal_cost(i) for i in range(3)] == [1.0, 0.5, 0.5])\n",
     "print([net.travel_time(i) for i in range(3)])\n",
     "print([net.marginal_cost(i) for i in range(3)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cvxpy\n",
-    "\n",
-    "d = 10\n",
-    "A = np.array([[2, 1, 1],\n",
-    "              [1, 1, 0],\n",
-    "              [1, 0, 1]]) + 1e-5\n",
-    "print(np.linalg.eig(A))\n",
-    "print(np.linalg.inv(A) @ B)\n",
-    "B = np.array([2.25, 3, 3])\n",
-    "\n",
-    "h = cvxpy.Variable(3)\n",
-    "h_s = np.array([0, 5, 5])\n",
-    "constraints = [\n",
-    "    h >= 0,\n",
-    "    np.sum(h) <= d\n",
-    "]\n",
-    "print(h_s.T @ A @ h_s + B @ h_s)\n",
-    "obj = cvxpy.Minimize(B @ h) # h.T @ A @ h + B @ h)\n",
-    "\n",
-    "pb = cvxpy.Problem(obj, constraints)\n",
-    "pb.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(net)"
    ]
   },
   {
