--- a/Networks.ipynb
+++ b/Networks.ipynb
@@ -109,22 +109,23 @@
     }
    ],
    "source": [
-    "net = network(\"Braess\", 4)\n",
+    "def Test_Braess():\n",
+    "    net = network(\"Braess\", 4)\n",
     "\n",
-    "print(\"---- TESTING ----\")\n",
-    "print(\"The Nash case\")\n",
-    "net.update_flow_from_dict({0:2,1:1,2:1})\n",
-    "assert([net.travel_time(i) for i in range(3)] == [3.75, 3.75, 3.75])\n",
-    "assert([net.marginal_cost(i) for i in range(3)] == [1.5, 0.75, 0.75])\n",
-    "print([net.travel_time(i) for i in range(3)])\n",
-    "print([net.marginal_cost(i) for i in range(3)])\n",
+    "    print(\"---- TESTING ----\")\n",
+    "    print(\"The Nash case\")\n",
+    "    net.update_flow_from_dict({0:2,1:1,2:1})\n",
+    "    assert([net.travel_time(i) for i in range(3)] == [3.75, 3.75, 3.75])\n",
+    "    assert([net.marginal_cost(i) for i in range(3)] == [1.5, 0.75, 0.75])\n",
+    "    print([net.travel_time(i) for i in range(3)])\n",
+    "    print([net.marginal_cost(i) for i in range(3)])\n",
     "\n",
-    "print(\"The social optimum case\")\n",
-    "net.update_flow_from_dict({0:0,1:2,2:2})\n",
-    "assert([net.travel_time(i) for i in range(3)] == [3.25, 3.5, 3.5])\n",
-    "assert([net.marginal_cost(i) for i in range(3)] == [1.0, 0.5, 0.5])\n",
-    "print([net.travel_time(i) for i in range(3)])\n",
-    "print([net.marginal_cost(i) for i in range(3)])"
+    "    print(\"The social optimum case\")\n",
+    "    net.update_flow_from_dict({0:0,1:2,2:2})\n",
+    "    assert([net.travel_time(i) for i in range(3)] == [3.25, 3.5, 3.5])\n",
+    "    assert([net.marginal_cost(i) for i in range(3)] == [1.0, 0.5, 0.5])\n",
+    "    print([net.travel_time(i) for i in range(3)])\n",
+    "    print([net.marginal_cost(i) for i in range(3)])"
    ]
   },
   {
