--- a/Env_without_ray.ipynb
+++ b/Env_without_ray.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,53 +44,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "step 0\n",
+      "car_0: 0\n",
+      "car_1: 0\n",
+      "car_2: 0\n",
+      "car_3: 0\n",
       "{0: 4}\n",
-      "1\n",
+      "travel time on path 0: 4.25\n",
+      "travel time on path 1: 4.0\n",
+      "travel time on path 2: 4.0\n",
+      "step 1\n",
+      "car_0: 0\n",
+      "car_1: 0\n",
+      "car_2: 0\n",
+      "car_3: 0\n",
+      "{0: 4}\n",
+      "travel time on path 0: 4.25\n",
+      "travel time on path 1: 4.0\n",
+      "travel time on path 2: 4.0\n",
+      "step 2\n",
+      "car_0: 0\n",
+      "car_1: 0\n",
+      "car_2: 0\n",
+      "car_3: 0\n",
+      "{0: 4}\n",
+      "travel time on path 0: 4.25\n",
+      "travel time on path 1: 4.0\n",
+      "travel time on path 2: 4.0\n",
+      "step 3\n",
+      "car_0: 0\n",
+      "car_1: 0\n",
+      "car_2: 0\n",
+      "car_3: 0\n",
+      "{0: 4}\n",
+      "travel time on path 0: 4.25\n",
+      "travel time on path 1: 4.0\n",
+      "travel time on path 2: 4.0\n",
+      "step 4\n",
+      "car_0: 0\n",
+      "car_1: 0\n",
+      "car_2: 0\n",
+      "car_3: 0\n",
+      "{0: 4}\n",
+      "travel time on path 0: 4.25\n",
+      "travel time on path 1: 4.0\n",
+      "travel time on path 2: 4.0\n",
+      "step 5\n",
+      "car_0: 0\n",
+      "car_1: 0\n",
+      "car_2: 0\n",
+      "car_3: 1\n",
       "{0: 3, 1: 1}\n",
-      "2\n",
-      "{0: 2, 2: 2}\n",
-      "1\n",
-      "{0: 2, 2: 1, 1: 1}\n",
-      "1\n",
-      "{0: 2, 2: 1, 1: 1}\n",
-      "1\n",
-      "{0: 2, 2: 1, 1: 1}\n",
-      "1\n",
-      "{0: 2, 2: 1, 1: 1}\n",
-      "1\n",
-      "{0: 1, 2: 1, 1: 2}\n",
-      "2\n",
-      "{0: 1, 2: 2, 1: 1}\n",
-      "1\n",
-      "{0: 1, 2: 2, 1: 1}\n",
-      "1\n",
-      "{1: 3, 2: 1}\n",
-      "2\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n",
-      "{1: 2, 2: 2}\n",
-      "1\n"
+      "travel time on path 0: 4.0\n",
+      "travel time on path 1: 4.0\n",
+      "travel time on path 2: 3.75\n",
+      "step 6\n",
+      "car_0: 0\n",
+      "car_1: 0\n",
+      "car_2: 0\n",
+      "car_3: 1\n",
+      "{0: 3, 1: 1}\n",
+      "travel time on path 0: 4.0\n",
+      "travel time on path 1: 4.0\n",
+      "travel time on path 2: 3.75\n",
+      "step 7\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 2\n",
+      "car_3: 1\n",
+      "{2: 3, 1: 1}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.25\n",
+      "travel time on path 2: 3.75\n",
+      "step 8\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 2\n",
+      "car_3: 1\n",
+      "{2: 3, 1: 1}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.25\n",
+      "travel time on path 2: 3.75\n",
+      "step 9\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 10\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 11\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 12\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 13\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 14\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 15\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 16\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 17\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 18\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n",
+      "step 19\n",
+      "car_0: 2\n",
+      "car_1: 2\n",
+      "car_2: 1\n",
+      "car_3: 1\n",
+      "{2: 2, 1: 2}\n",
+      "travel time on path 0: 3.25\n",
+      "travel time on path 1: 3.5\n",
+      "travel time on path 2: 3.5\n"
      ]
     }
    ],
@@ -116,9 +256,11 @@
     "nb_iter = 20\n",
     "\n",
     "for i in range(nb_iter):\n",
+    "    print(\"step \" + str(i))\n",
     "    paths_flow_dict = {}\n",
     "    for name_car, cars_veh in cars_dict.items():\n",
     "        rl_action = cars_veh.get_path_choice()\n",
+    "        print(name_car + \": \" + str(rl_action))\n",
     "        if rl_action in paths_flow_dict:\n",
     "            paths_flow_dict[int(rl_action)] += 1\n",
     "        else:\n",
@@ -134,6 +276,7 @@
     "\n",
     "    for path in range(nb_paths):\n",
     "        travel_time[path] = network.travel_time(path)\n",
+    "        print(\"travel time on path \" + str(path) + \": \" + str(travel_time[path]))\n",
     "        # network marginal cost ( path ) return the marginal cost of the path\n",
     "        marginal_cost[path] = network.marginal_cost(path)\n",
     "\n",
